--- a/sources.bib
+++ b/sources.bib
@@ -182,3 +182,74 @@ Online, eBay, and dozens of others [3]%
   url    = {https://drive.google.com/file/d/1uviu1nH-tScFfgrovvFCrj7Omv8tFtkp/view},
   year   = {2019}
 }
+
+@book{lyu:sft,
+  editor = {Michael R. Lyu},
+  title  = {Software Fault Tolerance},
+  author = {John Wiley and Sons},
+  year   = {2005},
+  url    = {https://www.cse.cuhk.edu.hk/~lyu/book/sft/}
+}
+
+@inbook{aa:nvp,
+  author    = {Algirdas Avizienis},
+  title     = {The Methodology of N-Version Programming},
+  booktitle = {Software Fault Tolerance},
+  editor    = {Michael R. Lyu},
+  publisher = {John Wiley and Sons},
+  year      = {2005},
+  chapter   = {2},
+  url       = {https://www.cse.cuhk.edu.hk/~lyu/book/sft/pdf/chap2.pdf}
+}
+
+@inbook{libft,
+  author    = {YENNUN HUANG and CHANDRA KINTALA},
+  title     = {Software Fault Tolerance in the Application Layer},
+  booktitle = {Software Fault Tolerance},
+  editor    = {Michael R. Lyu},
+  publisher = {John Wiley and Sons},
+  year      = {2005},
+  chapter   = {10},
+  url       = {https://www.cse.cuhk.edu.hk/~lyu/book/sft/pdf/chap10.pdf}
+}
+
+@article{nscp,
+  author  = {Laprie, Jean-Claude and Arlat, Jean and Béounes, Christian and Kanoun, Karama},
+  year    = {1990},
+  month   = {08},
+  pages   = {39 - 51},
+  title   = {Definition and Analysis of Hardware and Software-Fault-Tolerant Architectures},
+  volume  = {23},
+  isbn    = {978-3-642-79791-0},
+  journal = {Computer},
+  doi     = {10.1109/2.56851}
+}
+
+@book{shubu,
+  editor    = {Shubu Mukherjee},
+  title     = {ARCHITECTURE DESIGN FOR SOFT ERRORS},
+  publisher = {Elsevier},
+  year      = {2008},
+  url       = {http://ndl.ethernet.edu.et/bitstream/123456789/8181/1/166.pdf}
+}
+
+@article{dd:sft,
+  author   = {Ammann, P.E. and Knight, J.C.},
+  journal  = {IEEE Transactions on Computers},
+  title    = {Data diversity: an approach to software fault tolerance},
+  year     = {1988},
+  volume   = {37},
+  number   = {4},
+  pages    = {418-425},
+  keywords = {Fault tolerance;System testing;Application software;Buildings;Computer applications;Software testing;Redundancy;Software algorithms;NASA;Computer science},
+  doi      = {10.1109/12.2185}
+}
+
+@inproceedings{approxcomp,
+  author    = {Roy, Kaushik},
+  booktitle = {2013 IEEE 16th International Symposium on Design and Diagnostics of Electronic Circuits \& Systems (DDECS)},
+  title     = {Approximate computing for energy-efficient error-resilient multimedia systems},
+  year      = {2013},
+  pages     = {5-6},
+  doi       = {10.1109/DDECS.2013.6549776}
+}
