--- a/src/environment.tex
+++ b/src/environment.tex
@@ -6,9 +6,9 @@ This section outlines the implementation environment, including hardware constra
 
 The implementation was developed for a 32-bit RISC-V core, running in a simulated environment. The simulation features a single RAM region with a total size of 1MB. Of this, 8KB was allocated for the stack and another 8KB for heap memory. These parameters can be adjusted as needed for testing and experimentation.
 
-A key feature of the RISC-V architecture is its interrupt and exception handling mechanism, which distinguishes between two primary types. \textit{Software exceptions} are triggered by the program itself, often to perform system calls, while \textit{hardware interrupts} are initiated by hardware events, such as timers or peripherals. The combination of these two systems allows for error detection and transferring control for recovery or rollback.
+A key feature of the RISC-V architecture is its interrupt and exception handling mechanism, which distinguishes between two primary types. \textit{Software exceptions} are triggered by the program itself, often to perform system calls, while \textit{hardware interrupts} are initiated by hardware events, such as timers or peripherals \cite{riscv:manual}. The combination of these two systems allows for error detection and transferring control for recovery or rollback.
 
-\subsection{FreeRTOS and Interrupt Management}
+\subsection{FreeRTOS and interrupt management}
 
 The system runs on the FreeRTOS kernel, a lightweight real-time operating system widely used in embedded systems. FreeRTOS is designed for minimal resource usage, making it suitable for constrained environments like our RISC-V simulation.
 
@@ -16,8 +16,8 @@ FreeRTOS uses \textit{tasks} to run user code. Task is a wrapper around user cod
 
 In addition to timer-based preemption, FreeRTOS also makes use of software exceptions, such as those triggered by the RISC-V \textit{ecall} instruction. These interrupts are typically used for system-level operations and are routed, along with hardware interrupts, through a shared interrupt handler. In our case, this handler is implemented using a vectored interrupt table to efficiently dispatch control to the correct service routine.
 
-\subsection{Rust Integration with FreeRTOS}
+\subsection{Rust integration with FreeRTOS}
 
 To enable Rust development on top of FreeRTOS, we used the open-source FreeRTOS-Rust library\footnote{\url{https://github.com/lobaro/FreeRTOS-rust}}. This library provides Rust bindings to the FreeRTOS C ABI. Modifications had to be done to ensure compatibility with our simulated environment. Notably, the used library required atomic instructions for certain functionality, however, our platform did not support atomic operations. Since we are only simulating single core, hardware multithreading is not a concern, as such, we could safely replace all atomic operations with their non-atomic counterparts.
 
-On top of this, RISC-V Rust library\footnote{\url{https://github.com/rust-embedded/riscv}} was used to facilitate the compilation of Rust into a RISC-V acceptable binary. This library provided functionality such as designating the program entry point, designating the exception and interrupt handler functions and provided functions to work with RISC-V specific registers. However, the used library also added significant performance overhead in the form of BSS clearing segment before the main program start. Clearing BSS is useful to ensure all variables are initialized to 0 if a default value is not assigned. However, because Rust does not fundamentally allow for the use of non-instantiated variables this step was not necessary for our use case. By removing this segment we saved significant computation time, reducing the possible area for faults to manifest.
+On top of this, RISC-V Rust library\footnote{\url{https://github.com/rust-embedded/riscv}} was used to facilitate the compilation of Rust into a RISC-V acceptable binary. This library provided functionality such as designating the program entry point, designating the exception and interrupt handler functions and provided functions to work with RISC-V specific registers. However, the used library also added significant performance overhead in the form of \acrfull{bss} clearing (setting all static variables to 0) before the main program start. Clearing \acrshort{bss} is useful to ensure all variables are correctly initialized if a default value is not assigned. However, because Rust does not fundamentally allow for the use of non-instantiated variables this step was not necessary for our use case. By removing this segment we saved significant computation time, reducing the possible area for faults to manifest.
