--- a/src/nomenclature.tex
+++ b/src/nomenclature.tex
@@ -2,12 +2,24 @@
 
 For the sake of consistency in the terms used in this document, we will refer to the naming conventions and definitions as outlined in \cite{1335465}. Below are the definitions of the most crucial terms used. \\
 
-\textbf{Failure} is an event that occurs when the delivered service deviates from correct service. A service fails either because it does not comply with the functional specification, or because this specification did not adequately describe the system function. A service failure is a transition from correct service to incorrect service, i.e., to not implementing the system function \cite{1335465}. \\
+\textbf{Failure} is an event that occurs when the delivered service deviates from correct service. A service fails either because it does not comply with the functional specification, or because this specification did not adequately describe the system function. A service failure is a transition from correct service to incorrect service, i.e., to not implementing the system function \cite{1335465}.
+\textit{Example: An I/O component not communicating with the system.} \\
 
-\textbf{Error} is a deviation of the service from its correct state. It is a part of the system's state that may lead to service failure \cite{1335465}. Errors are the observable result of issues within the software and or hardware. \\
+\textbf{Failure domain}
 
-\textbf{Fault} is the actual or hypothesized cause of an error. Faults are usually considered dormant until manifested, causing an error \cite{1335465}. An example of a fault might be hardware issue causing an I/O device to send corrupted data as input. If the software is not designed to deal with incorrect input this would lead to an internal error, possibly causing a service failure. \\
+\textbf{Fault} is the actual or hypothesized cause of an error. Faults are usually considered dormant until manifested, causing an error \cite{1335465}. An example of a fault might be hardware issue causing an I/O device to send corrupted data as input. If the software is not designed to deal with incorrect input this would lead to an internal error, possibly causing a service failure.
+\textit{Example: A bit-flip in memory caused by radiation.} \\
 
-\textbf{Fault Tolerance} is the system's ability to continue operating correctly in the presence of faults. Rather than eliminating faults entirely, fault-tolerant systems are designed to detect, isolate, and recover from faults before they cause service failures. \\
+\textbf{Error} is a deviation of the service from its correct state. It is a part of the system's state that may lead to service failure \cite{1335465}. Errors are the observable result of issues within the software and or hardware. 
+\textit{Example: A fault that changes the output variable's value.} \\
 
-\textbf{System boundary} defines what is considered part of the system and what is not. It separates the system from everything outside it. This helps us know which components, functions, or behaviors are included when analyzing or designing the system. Understanding the system boundary is important for knowing where problems might happen and who or what is responsible for handling them.
+\textbf{Fault Tolerance} is the system's ability to continue operating correctly in the presence of faults. Rather than eliminating faults entirely, fault-tolerant systems are designed to detect, isolate, and recover from faults before they cause service failures. 
+\textit{Example: System operating correctly with one of its sensors not reponding.}\\
+
+\textbf{System} is the collection of all components required to execute our program. This includes the processor with all of its components as well as any I/O peripherals and sensors, but also the program code.
+\textit{Example: A microprocessor with a thermometer and antenna for communication.} \\
+
+\textbf{System boundary} defines what is considered part of the system and what is not. It can be thought of as an imaginary line separating the components that make up the system from the outside world. Everything within the system boundary is part of the system, while everything outside is part of the environment.
+
+\textbf{Service degradation} is the process of delivering incomplete or less optimal but still acceptable service. An example could be lowering video quality. 
+
